Dodanie generowania do commons i do frontend
