# commons-microservice/src/client-order/model/badResponse.ts
@@ -1,0 +1,25 @@
+/**
+ * order-microservice
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface BadResponse { 
+    message: string;
+    error: BadResponse.ErrorEnum;
+}
+export namespace BadResponse {
+    export type ErrorEnum = 'true';
+    export const ErrorEnum = {
+        True: 'true' as ErrorEnum
+    };
+}
+
+
