# order-microservice/src/generated/swagger.json
@@ -6,6 +6,25 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"BadResponse": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"error": {
+						"type": "boolean",
+						"enum": [
+							"true"
+						],
+						"nullable": false
+					}
+				},
+				"required": [
+					"message",
+					"error"
+				],
+				"type": "object"
+			},
 			"UserBaseEvent": {
 				"properties": {
 					"who": {
@@ -254,48 +273,35 @@
 					}
 				]
 			},
+			"OkResponse_OrderEventUnion-Array_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/OrderEventUnion"
+						},
+						"type": "array"
+					},
+					"error": {
+						"type": "boolean",
+						"enum": [
+							"false"
+						],
+						"nullable": false
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object"
+			},
 			"ErrorResponse_OrderEventUnion-Array_": {
 				"anyOf": [
 					{
-						"properties": {
-							"message": {
-								"type": "string"
-							},
-							"error": {
-								"type": "boolean",
-								"enum": [
-									"true"
-								],
-								"nullable": false
-							}
-						},
-						"required": [
-							"message",
-							"error"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/BadResponse"
 					},
 					{
-						"properties": {
-							"data": {
-								"items": {
-									"$ref": "#/components/schemas/OrderEventUnion"
-								},
-								"type": "array"
-							},
-							"error": {
-								"type": "boolean",
-								"enum": [
-									"false"
-								],
-								"nullable": false
-							}
-						},
-						"required": [
-							"data",
-							"error"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/OkResponse_OrderEventUnion-Array_"
 					}
 				]
 			},
@@ -303,45 +309,32 @@
 				"properties": {},
 				"type": "object"
 			},
+			"OkResponse_Empty_": {
+				"properties": {
+					"data": {
+						"$ref": "#/components/schemas/Empty"
+					},
+					"error": {
+						"type": "boolean",
+						"enum": [
+							"false"
+						],
+						"nullable": false
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object"
+			},
 			"ErrorResponse_Empty_": {
 				"anyOf": [
 					{
-						"properties": {
-							"message": {
-								"type": "string"
-							},
-							"error": {
-								"type": "boolean",
-								"enum": [
-									"true"
-								],
-								"nullable": false
-							}
-						},
-						"required": [
-							"message",
-							"error"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/BadResponse"
 					},
 					{
-						"properties": {
-							"data": {
-								"$ref": "#/components/schemas/Empty"
-							},
-							"error": {
-								"type": "boolean",
-								"enum": [
-									"false"
-								],
-								"nullable": false
-							}
-						},
-						"required": [
-							"data",
-							"error"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/OkResponse_Empty_"
 					}
 				]
 			},
@@ -399,48 +392,35 @@
 					}
 				]
 			},
+			"OkResponse_OrderDto-Array_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/OrderDto"
+						},
+						"type": "array"
+					},
+					"error": {
+						"type": "boolean",
+						"enum": [
+							"false"
+						],
+						"nullable": false
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object"
+			},
 			"ErrorResponse_OrderDto-Array_": {
 				"anyOf": [
 					{
-						"properties": {
-							"message": {
-								"type": "string"
-							},
-							"error": {
-								"type": "boolean",
-								"enum": [
-									"true"
-								],
-								"nullable": false
-							}
-						},
-						"required": [
-							"message",
-							"error"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/BadResponse"
 					},
 					{
-						"properties": {
-							"data": {
-								"items": {
-									"$ref": "#/components/schemas/OrderDto"
-								},
-								"type": "array"
-							},
-							"error": {
-								"type": "boolean",
-								"enum": [
-									"false"
-								],
-								"nullable": false
-							}
-						},
-						"required": [
-							"data",
-							"error"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/OkResponse_OrderDto-Array_"
 					}
 				]
 			}
